DMP-1531 - if mapping exists in database, but is not mapping to a handler, then return 200